--- a/android/src/main/res/layout/activity_files.xml
+++ b/android/src/main/res/layout/activity_files.xml
@@ -16,7 +16,7 @@
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/files_list" />
+            android:id="@+id/fileListRecyclerViewId" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
